*/ Margin-bottom corregido /*

--- a/freecodecamp/index.html
+++ b/freecodecamp/index.html
@@ -40,7 +40,7 @@
         <select id="dropdown2" name="dropdown2">
           <option value="">Elige una</option>
           <option value="10">Su calidad</option>
-          <option value="11">La pasión con la que se vive
+          <option value="11">La pasión con la que se vive</option>
             <option value="12">Las hinchadas</option>
           </option>
           <option value="13">Tu equipo</option>
